--- a/syntax.css
+++ b/syntax.css
@@ -1,13 +1,15 @@
-h1,li{
-    color:blue;
-    font-size: 14px;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+#Tekst1 h1 + p{
+
+color:crimson;
 
 }
 
-#Tekst2 span{
 
-    color:rgb(20, 112, 55)
+div[id]{
+
+background: gray;
+
 }
+
+
 
