--- a/syntax.css
+++ b/syntax.css
@@ -11,5 +11,42 @@ background: gray;
 
 }
 
+article p:first-child{
+
+font-weight: bold;
 
 
+}
+article p:last-child{
+
+    color:red;
+    
+    
+    }
+li:nth-child(2), li:nth-child(3){
+
+font-weight: bold;
+
+}
+
+li:nth-child(even){
+
+    background: blue;
+        
+        }
+li:nth-child(odd){
+
+            background:violet;  
+                }
+
+article:nth-of-type(1){
+
+background-color:turquoise;
+
+}
+
+article:nth-of-type(2n +1){
+
+
+    background:yellow;
+}
