--- a/syntax.css
+++ b/syntax.css
@@ -20,8 +20,7 @@ font-weight: bold;
 article p:last-child{
 
     color:red;
-    
-    
+
     }
 li:nth-child(2), li:nth-child(3){
 
@@ -32,11 +31,11 @@ font-weight: bold;
 li:nth-child(even){
 
     background: blue;
-        
+
         }
 li:nth-child(odd){
 
-            background:violet;  
+ background:violet;  
                 }
 
 article:nth-of-type(1){
@@ -49,4 +48,48 @@ article:nth-of-type(2n +1){
 
 
     background:yellow;
+}
+
+article{
+
+     font-size: 16px;
+
+}
+
+article h2{
+
+    font-size: 3em;}
+
+
+
+
+article h2, article p{
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 32px;
+
+}
+
+h1{
+
+    font-weight: normal;
+    text-transform: capitalize;
+
+
+}
+
+a{
+    color:crimson;
+    text-decoration: none;
+    font-weight: bold;
+}
+a:hover{
+
+    color:darkmagenta;
+    text-decoration: underline;
+    background-color: aquamarine;
+
 }
