--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ img.kalifa{
     top:0;
     left:0;
     
+    
 }
 
 /*Glowny naglowek*/
@@ -99,6 +100,7 @@ background-color:gold;
 border: 3px solid #aaa;
 color:hotpink;
 text-align: center;
+border-radius: 10px;
 
 
 
